# marketPulse

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
ios/MarketPulseApp/: README.md
ios/MarketPulseApp/MarketPulseApp/: ContentView.swift  Info.plist
ios/MarketPulseApp/MarketPulseApp.xcodeproj/: project.pbxproj
ios/MarketPulseApp/MarketPulseApp.xcodeproj/project.xcworkspace/xcuserdata/randall.xcuserdatad/: UserInterfaceState.xcuserstate
ios/MarketPulseApp/MarketPulseApp.xcodeproj/xcuserdata/randall.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/MarketPulseBar/: Package.swift  README.md  build_app.sh
macos/MarketPulseBar/Resources/: MarketPulseBar.icns
macos/MarketPulseBar/Sources/MarketPulseBar/: MarketPulseBarApp.swift
shared/MarketPulseShared/: Package.swift
shared/MarketPulseShared/.swiftpm/xcode/xcuserdata/randall.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/MarketPulseShared/Sources/MarketPulseCore/: Indicators.swift  MarketDataFetcher.swift  MarketPulseEngine.swift  MarketPulseService.swift  Models.swift
shared/MarketPulseShared/Sources/MarketPulseUI/: MarketPulseViews.swift
src/marketpulse/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  engine.py  indicators.py  models.py  summary.py  utils.py
src/marketpulse/providers/: base.py  breadth.py  market.py  vix.py
tests/unit/: test_engine.py  test_indicators.py  test_providers.py
