[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketpulse"
version = "0.1.0"
description = "Personal market health terminal dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "marketPulse" }]
keywords = ["markets", "terminal", "dashboard", "breadth"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "platformdirs>=4.2",
  "requests>=2.31",
  "rich>=13.7",
  "textual>=0.58",
  "typer>=0.12",
  "yfinance>=0.2.40",
]

[project.scripts]
marketpulse = "marketpulse.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
